annotation/y.output

state 0
	$accept: .doc $end 
	Content: .    (2)

	.  reduce 2 (src line 38)

	Content  goto 2
	doc  goto 1

state 1
	$accept:  doc.$end 

	$end  accept
	.  error


state 2
	doc:  Content.    (1)
	Content:  Content.'@' Annotation 

	'@'  shift 3
	.  reduce 1 (src line 36)


state 3
	Content:  Content '@'.Annotation 

	ident  shift 5
	.  error

	Annotation  goto 4

state 4
	Content:  Content '@' Annotation.    (3)

	.  reduce 3 (src line 41)


state 5
	Annotation:  ident.    (4)
	Annotation:  ident.'(' ')' 
	Annotation:  ident.'(' Fields ')' 

	'('  shift 6
	.  reduce 4 (src line 49)


state 6
	Annotation:  ident '('.')' 
	Annotation:  ident '('.Fields ')' 

	ident  shift 12
	')'  shift 7
	nullLiteral  shift 17
	stringLiteral  shift 13
	boolLiteral  shift 14
	integerLiteral  shift 15
	floatLiteral  shift 16
	.  error

	Literal  goto 10
	Ident  goto 11
	Field  goto 9
	Fields  goto 8

state 7
	Annotation:  ident '(' ')'.    (5)

	.  reduce 5 (src line 52)


state 8
	Annotation:  ident '(' Fields.')' 
	Fields:  Fields.',' Field 

	')'  shift 18
	','  shift 19
	.  error


state 9
	Fields:  Field.    (8)

	.  reduce 8 (src line 62)


state 10
	Field:  Literal.    (9)

	.  reduce 9 (src line 66)


state 11
	Field:  Ident.    (10)
	Ident:  Ident.'.' ident 

	'.'  shift 20
	.  reduce 10 (src line 71)


state 12
	Field:  ident.'=' Ident 
	Field:  ident.'=' Literal 
	Field:  ident.'=' Array 
	Field:  ident.'=' Struct 
	Ident:  ident.    (15)

	'='  shift 21
	.  reduce 15 (src line 102)


state 13
	Literal:  stringLiteral.    (17)

	.  reduce 17 (src line 108)


state 14
	Literal:  boolLiteral.    (18)

	.  reduce 18 (src line 110)


state 15
	Literal:  integerLiteral.    (19)

	.  reduce 19 (src line 112)


state 16
	Literal:  floatLiteral.    (20)

	.  reduce 20 (src line 114)


state 17
	Literal:  nullLiteral.    (21)

	.  reduce 21 (src line 116)


state 18
	Annotation:  ident '(' Fields ')'.    (6)

	.  reduce 6 (src line 55)


state 19
	Fields:  Fields ','.Field 

	ident  shift 12
	nullLiteral  shift 17
	stringLiteral  shift 13
	boolLiteral  shift 14
	integerLiteral  shift 15
	floatLiteral  shift 16
	.  error

	Literal  goto 10
	Ident  goto 11
	Field  goto 22

state 20
	Ident:  Ident '.'.ident 

	ident  shift 23
	.  error


state 21
	Field:  ident '='.Ident 
	Field:  ident '='.Literal 
	Field:  ident '='.Array 
	Field:  ident '='.Struct 

	ident  shift 28
	'{'  shift 30
	'['  shift 29
	nullLiteral  shift 17
	stringLiteral  shift 13
	boolLiteral  shift 14
	integerLiteral  shift 15
	floatLiteral  shift 16
	.  error

	Literal  goto 25
	Ident  goto 24
	Array  goto 26
	Struct  goto 27

state 22
	Fields:  Fields ',' Field.    (7)

	.  reduce 7 (src line 60)


state 23
	Ident:  Ident '.' ident.    (16)

	.  reduce 16 (src line 104)


state 24
	Field:  ident '=' Ident.    (11)
	Ident:  Ident.'.' ident 

	'.'  shift 20
	.  reduce 11 (src line 76)


state 25
	Field:  ident '=' Literal.    (12)

	.  reduce 12 (src line 81)


state 26
	Field:  ident '=' Array.    (13)

	.  reduce 13 (src line 87)


state 27
	Field:  ident '=' Struct.    (14)

	.  reduce 14 (src line 93)


state 28
	Ident:  ident.    (15)

	.  reduce 15 (src line 102)


state 29
	Array:  '['.ArrayFields ']' 
	Array:  '['.']' 

	'{'  shift 30
	'['  shift 29
	']'  shift 32
	nullLiteral  shift 17
	stringLiteral  shift 13
	boolLiteral  shift 14
	integerLiteral  shift 15
	floatLiteral  shift 16
	.  error

	Literal  goto 34
	Array  goto 35
	Struct  goto 36
	ArrayFields  goto 31
	ArrayField  goto 33

state 30
	Struct:  '{'.'}' 
	Struct:  '{'.StructFields '}' 

	ident  shift 40
	'}'  shift 37
	.  error

	StructFields  goto 38
	StructField  goto 39

state 31
	Array:  '[' ArrayFields.']' 
	ArrayFields:  ArrayFields.',' ArrayField 

	','  shift 42
	']'  shift 41
	.  error


state 32
	Array:  '[' ']'.    (23)

	.  reduce 23 (src line 121)


state 33
	ArrayFields:  ArrayField.    (24)

	.  reduce 24 (src line 124)


state 34
	ArrayField:  Literal.    (26)

	.  reduce 26 (src line 128)


state 35
	ArrayField:  Array.    (27)

	.  reduce 27 (src line 129)


state 36
	ArrayField:  Struct.    (28)

	.  reduce 28 (src line 130)


state 37
	Struct:  '{' '}'.    (29)

	.  reduce 29 (src line 133)


state 38
	Struct:  '{' StructFields.'}' 
	StructFields:  StructFields.',' StructField 

	','  shift 44
	'}'  shift 43
	.  error


state 39
	StructFields:  StructField.    (31)

	.  reduce 31 (src line 137)


state 40
	StructField:  ident.'=' Literal 
	StructField:  ident.'=' Array 
	StructField:  ident.'=' Ident 
	StructField:  ident.'=' Struct 

	'='  shift 45
	.  error


state 41
	Array:  '[' ArrayFields ']'.    (22)

	.  reduce 22 (src line 120)


state 42
	ArrayFields:  ArrayFields ','.ArrayField 

	'{'  shift 30
	'['  shift 29
	nullLiteral  shift 17
	stringLiteral  shift 13
	boolLiteral  shift 14
	integerLiteral  shift 15
	floatLiteral  shift 16
	.  error

	Literal  goto 34
	Array  goto 35
	Struct  goto 36
	ArrayField  goto 46

state 43
	Struct:  '{' StructFields '}'.    (30)

	.  reduce 30 (src line 134)


state 44
	StructFields:  StructFields ','.StructField 

	ident  shift 40
	.  error

	StructField  goto 47

state 45
	StructField:  ident '='.Literal 
	StructField:  ident '='.Array 
	StructField:  ident '='.Ident 
	StructField:  ident '='.Struct 

	ident  shift 28
	'{'  shift 30
	'['  shift 29
	nullLiteral  shift 17
	stringLiteral  shift 13
	boolLiteral  shift 14
	integerLiteral  shift 15
	floatLiteral  shift 16
	.  error

	Literal  goto 48
	Ident  goto 50
	Array  goto 49
	Struct  goto 51

state 46
	ArrayFields:  ArrayFields ',' ArrayField.    (25)

	.  reduce 25 (src line 125)


state 47
	StructFields:  StructFields ',' StructField.    (32)

	.  reduce 32 (src line 138)


state 48
	StructField:  ident '=' Literal.    (33)

	.  reduce 33 (src line 141)


state 49
	StructField:  ident '=' Array.    (34)

	.  reduce 34 (src line 142)


state 50
	Ident:  Ident.'.' ident 
	StructField:  ident '=' Ident.    (35)

	'.'  shift 20
	.  reduce 35 (src line 143)


state 51
	StructField:  ident '=' Struct.    (36)

	.  reduce 36 (src line 144)


22 terminals, 14 nonterminals
37 grammar rules, 52/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
63 working sets used
memory: parser 32/240000
16 extra closures
62 shift entries, 1 exceptions
26 goto entries
4 entries saved by goto default
Optimizer space used: output 78/240000
78 table entries, 0 zero
maximum spread: 22, maximum offset: 45
